tests/invalid/undeclared_var.c
int main() {
    return a;
}
// ERROR: Line 2, Error 3001